--- a/learning-area.test/www/index.html
+++ b/learning-area.test/www/index.html
@@ -101,6 +101,7 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
+          <img src="/originals/120pxfirefox_logo-only_RGB.png" alt="logo">
 
     </header>
 
