--- a/first.test/www/prodvinutiytext.html
+++ b/first.test/www/prodvinutiytext.html
@@ -4,38 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styletoprodvinutiytext.css">
     <title>Изучаю продвинутый текст</title>
 </head>
 <body>
     <p id="nav"><h1>Меню навигации</h1></p>
     <ul>
-        <li><a title="Стартовая страница" href="/index.html">Стартовая страница</a></li>
+        <li><a title= "Cтовая страница" href="/index.html">Стартовая страница</a></li>
         <li><a title="Начальные уроки, где я игрался с картинками, конками и тд." href="/2index.html">Начальные уроки, где я игрался с картинками, конками и тд.</a></li>
         <li><a title="Списки, что внутри head, начальное форматирование текста." href="/learn3.html">Списки, что внутри head, начальное форматирование текста.</a></li>
         <li><a title="Работаем ссылками, создаем прикалываемся и тд." href="/creatHuperLink.html">Работаем ссылками, создаем прикалываемся и тд.</a></li>
         <li><a title="Изучаю продвинутый текст" href="/prodvinutiytext.html">Изучаю продвинутый текст</a></li>
     </ul>
     <hr>
-    <p><h2>Списки описания</h2></p>
-    <dl>
-        <dt>Бекон</dt>
-        <dd>Скрепляет мир вокруг.</dd>
-        <dt>Яйца</dt>
-        <dd>Скрепляют пироги вокруг.</dd>
-        <dt>Кофе</dt>
-        <dd>Рычаг, движущий планетами.</dd>
-        <dt>Светло</dt>
-        <dd>коричневого цвета.</dd> 
+    <h2 class="colorRed">Списки описания</h2>
+    <dl style="border-color: blue; border-style: groove; padding: 5px; background-color: orange;">
+        <dt style="border-color: red; border-style: double; padding: auto;">Бекон</dt>
+        <dd style="border-color: green; border-style: outset; padding: auto;">Скрепляет мир вокруг.</dd>
+        <dt style="border-color: red; border-style: double; padding: auto;">Яйца</dt>
+        <dd style="border-color: green; border-style: outset; padding: auto;">Скрепляют пироги вокруг.</dd>
+        <dt style="border-color: red; border-style: double; padding: auto;">Кофе</dt>
+        <dd style="border-color: green; border-style: outset; padding: auto;">Рычаг, движущий планетами.</dd>
+        <dt style="border-color: red; border-style: double; padding: auto;">Светлое пиво</dt>
+        <dd style="border-color:green; border-style: outset; padding: auto;">Делает мир веселей</dd>
     </dl>
     <hr>
-    <p><h2>Цитаты</h2></p>
-    <p><h3>Блочные цитаты</h3></p>
+    <h2 class="balagan">Цитаты</h2>
+    <div class="outer"><div class="box">Progress 90% - 30px</div></div>
+    <h3>Блочные цитаты</h3>
     <blockquote cite="https://developer.mozilla.org/ru/docs/Web/HTML/Element/blockquote">
         <p><strong>HTML-элемент<code>&lt;blockquote&gt;</code></strong> (от англ. <em>HTML Block
             Quotation Element</em>) указывает на то, что заключённый в нём текст является развёрнутой цитатой.</p>
  
     </blockquote>
-    <p><h2>Аббревиатуры</h2></p>
+    <h2>Аббревиатуры</h2
     <p>Проверяем работу <abbr id="abbr" title="Аббревиат́ура (итал. abbreviatura от лат. brevis — краткий) или сокращение. В старинных рукописях и книгах сокращённое написание слова или группы слов, имеющих морфологический смысл. В современных изданиях любое сокращённое слово или словосочетание.">аббревиатур.</abbr></p>
     <p>Получается что <a title="Что такое аббревиатуры" href="/prodvinutiytext.html#abbr">аббревиатуры</a> - это просто сокращение текста.</p>
     <h2>Что такое address, смотрим, пробуем</h2>
