--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -18,6 +18,7 @@
    <section>
        <h1>Тестовая страница</h1>
        <p>Эта странциа, полигон для использования CSS.</p>
+       <p >Добавим какю нибудь ошибку с abrakadabroi</p>
        <iframe width="560" height="315" src="https://www.youtube.com/embed/UVrb8EBOQjY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </section>
 </body>
