--- a/questioncss.test/www/index.html
+++ b/questioncss.test/www/index.html
@@ -35,11 +35,15 @@
     a:hover{
     text-decoration: none;
     }
-    div ~ p::first-letter {
+    div > p:first-child::first-letter {
     font-size: 150%;
     }
-    div ~ p::first-line{
+    div > p:first-child::first-line{
     color: red;
+    }
+    tr:nth-child(even) {
+      background: #333;
+      color: white;
     }
     </style>
 
