--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -19,7 +19,9 @@
        <h1>Тестовая страница</h1>
        <p>Эта странциа, полигон для использования CSS.</p>
        <p >Добавим какю нибудь ошибку с abrakadabroi</p>
-       <iframe width="560" height="315" src="https://www.youtube.com/embed/UVrb8EBOQjY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       <div class="content">
+            <iframe width="1280" height="720" src="https://www.youtube.com/embed/UVrb8EBOQjY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       </div>
    </section>
 </body>
 </html>
