--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -23,5 +23,10 @@
             <iframe width="480" height="320" src="https://www.youtube.com/embed/UVrb8EBOQjY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>
    </section>
-</body>
+   <section>
+       <h1>Проверка разного направления текста!</h1>
+       <p class="vertical-rl">Этот текст будет написан вертикально с ипользованием vertical-rl.</p>
+       <p class="vertical-lr">Этот текст будет написан вертикально с ипользованием vertical-lr.</p>
+   </section>
+   </body>
 </html>
