--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -28,5 +28,18 @@
        <p class="vertical-rl">Этот текст будет написан вертикально с ипользованием vertical-rl.</p>
        <p class="vertical-lr">Этот текст будет написан вертикально с ипользованием vertical-lr.</p>
    </section>
+   <section>
+       <h1>Работа с переполнением</h1>
+       <div class="overfoluStandart">
+           <p>Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! </p>
+       </div>
+       <div class="overfoluHidden">
+           <p>Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! </p>
+       </div>
+       <div class="overfoluScroll">
+           <p>Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! </p>
+       </div>
+       </section>
+       
    </body>
 </html>
