--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -15,18 +15,24 @@
            <li>О нас</li>
        </ul>
    </nav> 
+   <div>
+    <h1>Тестовая страница</h1>
    <section>
-       <h1>Тестовая страница</h1>
        <p>Эта странциа, полигон для использования CSS.</p>
        <p >Добавим какю нибудь ошибку с abrakadabroi</p>
        <div class="content">
             <iframe width="480" height="320" src="https://www.youtube.com/embed/UVrb8EBOQjY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>
    </section>
+   </div>
+<div>
+    <h1>Проверка разного направления текста!</h1>
    <section>
-       <h1>Проверка разного направления текста!</h1>
-       <p class="vertical-rl">Этот текст будет написан вертикально с ипользованием vertical-rl.</p>
-       <p class="vertical-lr">Этот текст будет написан вертикально с ипользованием vertical-lr.</p>
+        <p class="vertical-rl">Этот текст будет написан вертикально <br> с ипользованием vertical-rl.</p>
+       <p class="vertical-lr">Этот текст будет написан вертикально <br> с ипользованием vertical-lr.</p>
+       <p class="horizontal-tb">Этот текст будет написан вертикально с ипользованием horizontal-tb.</p>
    </section>
+</div>
+
    </body>
 </html>
