--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -32,23 +32,24 @@
        <p class="vertical-lr">Этот текст будет написан вертикально <br> с ипользованием vertical-lr.</p>
        <p class="horizontal-tb">Этот текст будет написан вертикально с ипользованием horizontal-tb.</p>
    </section>
-<<<<<<< HEAD
-</div>
 
-=======
-   <section>
-       <h1>Работа с переполнением</h1>
-       <div class="overfoluStandart">
+</div>
+<div>
+    <h1>Работа с переполнением</h1>
+       <section>
+        <div class="overfoluStandart">
            <p>Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! </p>
        </div>
        <div class="overfoluHidden">
            <p>Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! </p>
        </div>
        <div class="overfoluScroll">
-           <p>Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! </p>
+           <p>Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! </p>
        </div>
        </section>
-       
->>>>>>> d35733020cc43c210d3cbb84df7a87505a7bbe94
+ 
+</div>
+   
+      
    </body>
 </html>
