--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <title>CSS Start</title>
 </head>
 <body>
@@ -47,9 +48,9 @@
            <p>Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! </p>
        </div>
        </section>
-<<<<<<< HEAD
+<div>
+    <h1>Стилизация HTML таблиц при помощи CSS</h1>
        <section>
-           <h1>Стилизация HTML таблиц при помощи CSS</h1>
  <table>
       <caption>A summary of the UK's most famous punk bands</caption>
       <thead>
@@ -118,12 +119,8 @@
       </tfoot>
     </table>
        </section>
-       
-=======
  
 </div>
-   
       
->>>>>>> 5e06fb90f475088f4085b7311a7519082c261702
    </body>
 </html>
