Не много причесал

--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -9,24 +9,27 @@
     <title>CSS Start</title>
 </head>
 <body>
-   <nav>
+   <nav name="top">
        <ul>
            <li>Домой</li>
            <li>Список статей</li>
            <li>О нас</li>
        </ul>
    </nav> 
-   <div>
+   <div class="toUP">
+       <a href="#top"><img src="/up.webp" alt="Вверх" class="upIMG"></a>
+   </div>
+   <div class="wrapper-block">
     <h1>Тестовая страница</h1>
    <section>
        <p>Эта странциа, полигон для использования CSS.</p>
        <p >Добавим какю нибудь ошибку с abrakadabroi</p>
        <div class="content">
-            <iframe width="480" height="320" src="https://www.youtube.com/embed/UVrb8EBOQjY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="690" height="320" src="https://www.youtube.com/embed/UVrb8EBOQjY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>
    </section>
    </div>
-<div>
+<div class="wrapper-block">
     <h1>Проверка разного направления текста!</h1>
    <section>
        <p class="vertical-rl">Этот текст будет написан вертикально <br> с ипользованием vertical-rl.</p>
@@ -35,7 +38,7 @@
    </section>
 
 </div>
-<div>
+<div class="wrapper-block">
     <h1>Работа с переполнением</h1>
        <section>
         <div class="overfoluStandart">
@@ -48,7 +51,7 @@
            <p>Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! Много текста! </p>
        </div>
        </section>
-<div>
+<div class="wrapper-block">
     <h1>Стилизация HTML таблиц при помощи CSS</h1>
        <section>
  <table>
@@ -121,6 +124,49 @@
        </section>
  
 </div>
-      
+<div>
+    <h1>Стилизация списков</h1>
+    <section>
+        <h2>Shopping (unordered) list</h2>
+
+<p>Paragraph for reference, paragraph for reference, paragraph for reference,
+paragraph for reference, paragraph for reference, paragraph for reference.</p>
+
+<ul>
+  <li>Hummus</li>
+  <li>Pita</li>
+  <li>Green salad</li>
+  <li>Halloumi</li>
+</ul>
+
+<h2>Recipe (ordered) list</h2>
+
+<p>Paragraph for reference, paragraph for reference, paragraph for reference,
+paragraph for reference, paragraph for reference, paragraph for reference.</p>
+
+<ol>
+  <li>Toast pita, leave to cool, then slice down the edge.</li>
+  <li>Fry the halloumi in a shallow, non-stick pan, until browned on both sides.</li>
+  <li>Wash and chop the salad.</li>
+  <li>Fill pita with salad, hummus, and fried halloumi.</li>
+</ol>
+
+<h2>Ingredient description list</h2>
+
+<p>Paragraph for reference, paragraph for reference, paragraph for reference,
+paragraph for reference, paragraph for reference, paragraph for reference.</p>
+
+<dl>
+  <dt>Hummus</dt>
+  <dd>A thick dip/sauce generally made from chick peas blended with tahini, lemon juice, salt, garlic, and other ingredients.</dd>
+  <dt>Pita</dt>
+  <dd>A soft, slightly leavened flatbread.</dd>
+  <dt>Halloumi</dt>
+  <dd>A semi-hard, unripened, brined cheese with a higher-than-usual melting point, usually made from goat/sheep milk.</dd>
+  <dt>Green salad</dt>
+  <dd>That green healthy stuff that many of us just use to garnish kebabs.</dd>
+</dl>
+    </section>
+</div>      
    </body>
 </html>
