--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -124,7 +124,7 @@
        </section>
  
 </div>
-<div>
+<div class="wrapper-block">
     <h1>Стилизация списков</h1>
     <section>
         <h2>Shopping (unordered) list</h2>
@@ -168,5 +168,13 @@ paragraph for reference, paragraph for reference, paragraph for reference.</p>
 </dl>
     </section>
 </div>      
+<div class="wrapper-block">
+  <h1>Стилизация ссылок</h1>
+  <section>
+    <p>There are several browsers available, such as <a href="https://www.mozilla.org/en-US/firefox/">Mozilla
+Firefox</a>, <a href="https://www.google.com/chrome/index.html">Google Chrome</a>, and
+<a href="https://www.microsoft.com/en-us/windows/microsoft-edge">Microsoft Edge</a>.</p>
+  </section>
+</div>
    </body>
 </html>
