--- a/simplgrid.test/www/index.html
+++ b/simplgrid.test/www/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Simple grid</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="/style.css">
   </head>
 
   <body>
