--- a/cssstart.test/www/index.html
+++ b/cssstart.test/www/index.html
@@ -182,5 +182,20 @@ Firefox</a>, <a href="https://www.google.com/chrome/index.html">Google Chrome</a
 <a href="https://www.microsoft.com/en-us/windows/microsoft-edge">Microsoft Edge</a>.</p>
   </section>
 </div>
+<div class="wrapper-block">
+  <h1>Макет с несколькими столбцами</h1>
+  <section>
+    <div class="container">
+     <img src="/memkot.jpg" alt="memkot" title="1"> 
+     <img src="/memkot.jpg" alt="memkot" title="2"> 
+     <img src="/memkot.jpg" alt="memkot" title="3"> 
+     <img src="/memkot.jpg" alt="memkot" title="4"> 
+     <img src="/memkot.jpg" alt="memkot" title="5"> 
+     <img src="/memkot.jpg" alt="memkot" title="6"> 
+     <img src="/memkot.jpg" alt="memkot" title="7"> 
+    </div>
+
+  </section>
+</div>
    </body>
 </html>
