доделал ближайшие туры

--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -49,12 +49,44 @@
                     <!---Background image-->
                    <p>Дней: 3</p> 
                 </div>
+              <P>Хребет Ирендык</P>
+              <p>05.03.2021</p>
+              <p>от 1700 руб.</p>
                 </a>
             </div>
-            <div class="tour"></div>
-            <div class="tour"></div>
-            <div class="tour"></div>
-            <div class="tour"></div>
+            <div class="tour">
+                <a href="#">
+                <div class="prev">
+                    <!---Background image-->
+                   <p>Дней: 7</p> 
+                </div>
+              <P>Большой Иримель</P>
+              <p>05.03.2021</p>
+              <p>от 2800 руб.</p>
+                </a>
+            </div>
+            <div class="tour">
+                <a href="#">
+                <div class="prev">
+                    <!---Background image-->
+                   <p>Дней: 3</p> 
+                </div>
+              <P>«Зубы Шурале» Айгирские скалы</P>
+              <p>06.03.2021</p>
+              <p>от 1700 руб.</p>
+                </a>
+            </div>
+            <div class="tour">
+                <a href="#">
+                <div class="prev">
+                    <!---Background image-->
+                   <p>Дней: 5</p> 
+                </div>
+              <P>Мурыдымовское ущелье</P>
+              <p>13.03.2021</p>
+              <p>от 2200 руб.</p>
+                </a>
+            </div>
         </div>
     </div>
 </body>
