--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -87,6 +87,28 @@
               <p>от 2200 руб.</p>
                 </a>
             </div>
+            <a href="#"><!--Стрелка в лево--></a>
+            <a href="#"><!--Стрелка в право--></a>
+        </div>
+        <div class="howitwas">
+            <img src="#" alt="Картинка1">
+            <img src="#" alt="Картинка2">
+            <img src="#" alt="Картинка3">
+            <img src="#" alt="Картинка4">
+            <img src="#" alt="Картинка5">
+            <img src="#" alt="Картинка6">
+        </div>
+        <div class="sayabout">
+                <div class="aboutus">
+                    <img src="#" alt="Аватар1">
+                    <p>Михаил</p>
+                    <P>Ездил с супругой в большой 7-дневный тур. Сервис и организация похода просто на высоте! Все очень понравилось.</P>
+                </div>
+                <div class="aboutus">
+                    <img src="#" alt="Аватар2">
+                    <p>Ирина</p>
+                    <P>Очень порадовало наличие туров, в которые можно отправиться с детьми. Приятно провели время на природе.</P>
+                </div>
         </div>
     </div>
 </body>
