--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -108,8 +108,55 @@
                     <img src="#" alt="Аватар2">
                     <p>Ирина</p>
                     <P>Очень порадовало наличие туров, в которые можно отправиться с детьми. Приятно провели время на природе.</P>
+                    <p>Лево</p>
+                    <p>Право</p>
                 </div>
+                <p>Лево</p>
+                <p>Право</p>
+        </div>
+        <div class="request">
+            <h1>Оставьте заявку...</h1>
+            <p>Не можете определиться с туром? Оставьте свой номер телефона, и мы перезвоним Вам в ближайшее время.</p>
+            <!-- Нужно доделать форму-->
         </div>
     </div>
+    <footer>
+        <!--
+            тут должно быть фоновое изображение
+        -->
+        <div>
+            <h1>...или приходите в наш офис</h1>
+            <div class="contact">
+                <img src="#" alt="Пиктограмма маркера">
+                <P>г. Уфа, ул. Карла Маркса, 19 c 10:00 до 19:00</P>
+                <img src="#" alt="Пиктограмма телефона">
+                <p>+ 7 (999) 123 45 67</p>
+                <img src="#" alt="Пиктограмма конверта">
+                <p>bashtour@gmail.com</p>
+            </div>
+            <div class="footer">
+            <div class="logo">
+                <img src="/img/Vector.png" alt="BASHTOUR">
+                <p>BASHTOUR</p>
+            </div>
+            <div class="social">
+                <a href="#">
+                    <img src="#" alt="Vk">
+                </a>
+                <a href="#">
+                    <img src="#" alt="Ints">
+                </a>
+                <a href="#">
+                    <img src="#" alt="Youtube">
+                </a>
+                <a href="#">
+                    <img src="#" alt="Facebook">
+                </a>
+            </div>
+            <a href="#">Все права защищены</a>
+            <a href="#">Политика конфиденциальности</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
