--- a/webform.test/www/Index.html
+++ b/webform.test/www/Index.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
    <form action="/my-handling-form-page" method="post">
-
-</form> 
+       <ul>
+           <li>
+               <label for="name">Name: </label>
+               <input type="text" id="name" name="user_name">
+           </li>
+           <li>
+               <label for="mail">E-mail: </label>
+               <input type="email" id="mail" name="user_mail">
+           </li>
+           <li>
+               <label for="msg">Message: </label>
+               <textarea name="user_message" id="msg">Тут находится какой то текст!</textarea>
+           </li>
+           <li class="button">
+               <button type="submit">Send your message!</button>
+           </li>
+       </ul>
+    </form> 
 </body>
 </html>
