Доделал форму баштура

--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -117,7 +117,19 @@
         <div class="request">
             <h1>Оставьте заявку...</h1>
             <p>Не можете определиться с туром? Оставьте свой номер телефона, и мы перезвоним Вам в ближайшее время.</p>
-            <!-- Нужно доделать форму-->
+            <form action="#" method="post">
+                <ul>
+                    <li>
+                        <input type="text" id="name" name="request" value="Имя">
+                    </li>
+                    <li>
+                        <input type="tel" id="tel" name="request" value="+ 7 (999) 765 43 21">
+                    </li>
+                    <li>
+                        <button type="submit">Отправить</button>
+                    </li>
+                </ul>
+            </form>
         </div>
     </div>
     <footer>
