--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -1,174 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css">
     <title>BASHTOUR - Пешие туры по Башкирии</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="main-container">
-        <header>
-            <div class="logo">
-                <img src="/img/Vector.png" alt="BASHTOUR">
-                <p>BASHTOUR</p>
-            </div>
-            <nav>
-                <ul>
-                    <li>Главная</li>
-                    <li>О нас</li>
-                    <li>Каталог туров</li>
-                    <li>Контакты</li>
-                </ul>
-            </nav>
-            <div class="phone">
-                <p>+7 (999) 123 45 67</p>
-            </div>
-            <p class="hight-text">Пешие туры по Башкирии</p>
-            <p>Исследуем Южный Урал каждые выходные</p>
-            <a href="" class="header-link"><p>Хочу с вами!</p></a>
-        </header>
-        <div class="whoarewe">
-            <h1>Кто мы такие?</h1>
-            <img src="/img/" alt="">
-            <p>Компания BASHTOUR уже более семи лет занимается организацией активного отдыха на территории республики Башкортостан. Мы точно знаем самые красочные и удивительные места.
-
-Ежегодно мы и наши туристы проходим более тысячи километров по пересеченной местности. Маршурты походов выстроены так, чтобы все дни тура получились маскимально разнообразными. 
-
-Если вы любите яркие, насыщенные впечатлениями путешествия, записывайтесь в увлекательный поход по Башкортостану в нашей дружной компании!</p>
-            <p>Пеший поход с командой BASHTOUR — это уникальная возможность изучить природу родного края, познакомиться с историей и культурой республики, а также получить заряд позитива и вдохновения на месяц вперед.
-
-            Протяженность полноценного похода составляет в среднем 30-80 км. Вашими спутниками станут величественные горы, живописные берега, песни у вечернего костра, душевные беседы, рыбалка и комары. Но настоящий турист не боится комаров!</p>
-            <img src="/img/" alt="">
+      <header>
+        <div class="logo">
+          <img src="/img/Vector.png" alt="BASHTOUR" />
+          <p>BASHTOUR</p>
         </div>
-        <div class="upcomingtours">
-            <a href="#">Смотреть все</a>
-            <div class="tour">
-                <a href="#">
-                <div class="prev">
-                    <!---Background image-->
-                   <p>Дней: 3</p> 
-                </div>
-              <P>Хребет Ирендык</P>
-              <p>05.03.2021</p>
-              <p>от 1700 руб.</p>
-                </a>
-            </div>
-            <div class="tour">
-                <a href="#">
-                <div class="prev">
-                    <!---Background image-->
-                   <p>Дней: 7</p> 
-                </div>
-              <P>Большой Иримель</P>
-              <p>05.03.2021</p>
-              <p>от 2800 руб.</p>
-                </a>
-            </div>
-            <div class="tour">
-                <a href="#">
-                <div class="prev">
-                    <!---Background image-->
-                   <p>Дней: 3</p> 
-                </div>
-              <P>«Зубы Шурале» Айгирские скалы</P>
-              <p>06.03.2021</p>
-              <p>от 1700 руб.</p>
-                </a>
-            </div>
-            <div class="tour">
-                <a href="#">
-                <div class="prev">
-                    <!---Background image-->
-                   <p>Дней: 5</p> 
-                </div>
-              <P>Мурыдымовское ущелье</P>
-              <p>13.03.2021</p>
-              <p>от 2200 руб.</p>
-                </a>
-            </div>
-            <a href="#"><!--Стрелка в лево--></a>
-            <a href="#"><!--Стрелка в право--></a>
+        <nav>
+          <ul>
+            <li>Главная</li>
+            <li>О нас</li>
+            <li>Каталог туров</li>
+            <li>Контакты</li>
+          </ul>
+        </nav>
+        <div class="phone">
+          <p>+7 (999) 123 45 67</p>
         </div>
-        <div class="howitwas">
-            <img src="#" alt="Картинка1">
-            <img src="#" alt="Картинка2">
-            <img src="#" alt="Картинка3">
-            <img src="#" alt="Картинка4">
-            <img src="#" alt="Картинка5">
-            <img src="#" alt="Картинка6">
+        <p class="hight-text">Пешие туры по Башкирии</p>
+        <p>Исследуем Южный Урал каждые выходные</p>
+        <a href="" class="header-link"><p>Хочу с вами!</p></a>
+      </header>
+      <div class="whoarewe">
+        <h1>Кто мы такие?</h1>
+        <img src="/img/" alt="" />
+        <p>
+          Компания BASHTOUR уже более семи лет занимается организацией активного
+          отдыха на территории республики Башкортостан. Мы точно знаем самые
+          красочные и удивительные места. Ежегодно мы и наши туристы проходим
+          более тысячи километров по пересеченной местности. Маршурты походов
+          выстроены так, чтобы все дни тура получились маскимально
+          разнообразными. Если вы любите яркие, насыщенные впечатлениями
+          путешествия, записывайтесь в увлекательный поход по Башкортостану в
+          нашей дружной компании!
+        </p>
+        <p>
+          Пеший поход с командой BASHTOUR — это уникальная возможность изучить
+          природу родного края, познакомиться с историей и культурой республики,
+          а также получить заряд позитива и вдохновения на месяц вперед.
+          Протяженность полноценного похода составляет в среднем 30-80 км.
+          Вашими спутниками станут величественные горы, живописные берега, песни
+          у вечернего костра, душевные беседы, рыбалка и комары. Но настоящий
+          турист не боится комаров!
+        </p>
+        <img src="/img/" alt="" />
+      </div>
+      <div class="upcomingtours">
+        <a href="#">Смотреть все</a>
+        <div class="tour">
+          <a href="#">
+            <div class="prev">
+              <!---Background image-->
+              <p>Дней: 3</p>
+            </div>
+            <p>Хребет Ирендык</p>
+            <p>05.03.2021</p>
+            <p>от 1700 руб.</p>
+          </a>
         </div>
-        <div class="sayabout">
-                <div class="aboutus">
-                    <img src="#" alt="Аватар1">
-                    <p>Михаил</p>
-                    <P>Ездил с супругой в большой 7-дневный тур. Сервис и организация похода просто на высоте! Все очень понравилось.</P>
-                </div>
-                <div class="aboutus">
-                    <img src="#" alt="Аватар2">
-                    <p>Ирина</p>
-                    <P>Очень порадовало наличие туров, в которые можно отправиться с детьми. Приятно провели время на природе.</P>
-                    <p>Лево</p>
-                    <p>Право</p>
-                </div>
-                <p>Лево</p>
-                <p>Право</p>
+        <div class="tour">
+          <a href="#">
+            <div class="prev">
+              <!---Background image-->
+              <p>Дней: 7</p>
+            </div>
+            <p>Большой Иримель</p>
+            <p>05.03.2021</p>
+            <p>от 2800 руб.</p>
+          </a>
         </div>
-        <div class="request">
-            <h1>Оставьте заявку...</h1>
-            <p>Не можете определиться с туром? Оставьте свой номер телефона, и мы перезвоним Вам в ближайшее время.</p>
-            <form action="#" method="post">
-                <ul>
-                    <li>
-                        <input type="text" id="name" name="request" value="Имя">
-                    </li>
-                    <li>
-                        <input type="tel" id="tel" name="request" value="+ 7 (999) 765 43 21">
-                    </li>
-                    <li>
-                        <button type="submit">Отправить</button>
-                    </li>
-                </ul>
-            </form>
+        <div class="tour">
+          <a href="#">
+            <div class="prev">
+              <!---Background image-->
+              <p>Дней: 3</p>
+            </div>
+            <p>«Зубы Шурале» Айгирские скалы</p>
+            <p>06.03.2021</p>
+            <p>от 1700 руб.</p>
+          </a>
         </div>
+        <div class="tour">
+          <a href="#">
+            <div class="prev">
+              <!---Background image-->
+              <p>Дней: 5</p>
+            </div>
+            <p>Мурыдымовское ущелье</p>
+            <p>13.03.2021</p>
+            <p>от 2200 руб.</p>
+          </a>
+        </div>
+        <a href="#"><!--Стрелка в лево--></a>
+        <a href="#"><!--Стрелка в право--></a>
+      </div>
+      <div class="howitwas">
+        <img src="#" alt="Картинка1" />
+        <img src="#" alt="Картинка2" />
+        <img src="#" alt="Картинка3" />
+        <img src="#" alt="Картинка4" />
+        <img src="#" alt="Картинка5" />
+        <img src="#" alt="Картинка6" />
+      </div>
+      <div class="sayabout">
+        <div class="aboutus">
+          <img src="#" alt="Аватар1" />
+          <p>Михаил</p>
+          <p>
+            Ездил с супругой в большой 7-дневный тур. Сервис и организация
+            похода просто на высоте! Все очень понравилось.
+          </p>
+        </div>
+        <div class="aboutus">
+          <img src="#" alt="Аватар2" />
+          <p>Ирина</p>
+          <p>
+            Очень порадовало наличие туров, в которые можно отправиться с
+            детьми. Приятно провели время на природе.
+          </p>
+          <p>Лево</p>
+          <p>Право</p>
+        </div>
+        <p>Лево</p>
+        <p>Право</p>
+      </div>
+      <div class="request">
+        <h1>Оставьте заявку...</h1>
+        <p>
+          Не можете определиться с туром? Оставьте свой номер телефона, и мы
+          перезвоним Вам в ближайшее время.
+        </p>
+        <form action="#" method="post">
+          <ul>
+            <li>
+              <input type="text" id="name" name="request" value="Имя" />
+            </li>
+            <li>
+              <input
+                type="tel"
+                id="tel"
+                name="request"
+                value="+ 7 (999) 765 43 21"
+              />
+            </li>
+            <li>
+              <button type="submit">Отправить</button>
+            </li>
+          </ul>
+        </form>
+      </div>
     </div>
     <footer>
-        <!--
+      <!--
             тут должно быть фоновое изображение
         -->
-        <div>
-            <h1>...или приходите в наш офис</h1>
-            <div class="contact">
-                <img src="#" alt="Пиктограмма маркера">
-                <P>г. Уфа, ул. Карла Маркса, 19 c 10:00 до 19:00</P>
-                <img src="#" alt="Пиктограмма телефона">
-                <p>+ 7 (999) 123 45 67</p>
-                <img src="#" alt="Пиктограмма конверта">
-                <p>bashtour@gmail.com</p>
-            </div>
-            <div class="footer">
-            <div class="logo">
-                <img src="/img/Vector.png" alt="BASHTOUR">
-                <p>BASHTOUR</p>
-            </div>
-            <div class="social">
-                <a href="#">
-                    <img src="#" alt="Vk">
-                </a>
-                <a href="#">
-                    <img src="#" alt="Ints">
-                </a>
-                <a href="#">
-                    <img src="#" alt="Youtube">
-                </a>
-                <a href="#">
-                    <img src="#" alt="Facebook">
-                </a>
-            </div>
-            <a href="#">Все права защищены</a>
-            <a href="#">Политика конфиденциальности</a>
-            </div>
+      <div>
+        <h1>...или приходите в наш офис</h1>
+        <div class="contact">
+          <img src="#" alt="Пиктограмма маркера" />
+          <p>г. Уфа, ул. Карла Маркса, 19 c 10:00 до 19:00</p>
+          <img src="#" alt="Пиктограмма телефона" />
+          <p>+ 7 (999) 123 45 67</p>
+          <img src="#" alt="Пиктограмма конверта" />
+          <p>bashtour@gmail.com</p>
         </div>
+        <div class="footer">
+          <div class="logo">
+            <img src="/img/Vector.png" alt="BASHTOUR" />
+            <p>BASHTOUR</p>
+          </div>
+          <div class="social">
+            <a href="#">
+              <img src="#" alt="Vk" />
+            </a>
+            <a href="#">
+              <img src="#" alt="Ints" />
+            </a>
+            <a href="#">
+              <img src="#" alt="Youtube" />
+            </a>
+            <a href="#">
+              <img src="#" alt="Facebook" />
+            </a>
+          </div>
+          <a href="#">Все права защищены</a>
+          <a href="#">Политика конфиденциальности</a>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
