--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
     <title>BASHTOUR - Пешие туры по Башкирии</title>
   </head>
   <body>
     <div class="main-container">
       <header>
-        <div class="logo">
-          <img src="/img/Vector.png" alt="BASHTOUR" />
-          <p>BASHTOUR</p>
-        </div>
-        <nav>
-          <ul>
-            <li>Главная</li>
-            <li>О нас</li>
-            <li>Каталог туров</li>
-            <li>Контакты</li>
-          </ul>
-        </nav>
-        <div class="phone">
-          <p>+7 (999) 123 45 67</p>
+        <div class="navbar">
+          <div class="logo">
+            <img src="/img/Vector.png" alt="BASHTOUR" />
+            <p>BASHTOUR</p>
+          </div>
+          <nav>
+            <ul>
+              <li>Главная</li>
+              <li>О нас</li>
+              <li>Каталог туров</li>
+              <li>Контакты</li>
+            </ul>
+          </nav>
+          <div class="phone">
+            <p>+7 (999) 123 45 67</p>
+          </div>
         </div>
         <p class="hight-text">Пешие туры по Башкирии</p>
         <p>Исследуем Южный Урал каждые выходные</p>
