--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -17,10 +17,10 @@
           </div>
           <nav>
             <ul>
-              <li>Главная</li>
-              <li>О нас</li>
-              <li>Каталог туров</li>
-              <li>Контакты</li>
+              <li> <a href="#">Главная</a></li>
+              <li><a href="#">О нас</a></li>
+              <li><a href="#">Каталог туров</a></li>
+              <li><a href="#">Контакты</a></li>
             </ul>
           </nav>
           <div class="phone">
