--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -13,23 +13,25 @@
         <div class="navbar">
           <div class="logo">
             <img src="/img/Vector.png" alt="BASHTOUR" />
-            <p>BASHTOUR</p>
+            <p><span class="orangeText">BASH</span>TOUR</p>
           </div>
           <nav>
             <ul>
-              <li> <a href="#">Главная</a></li>
+              <li><a href="#">Главная</a></li>
               <li><a href="#">О нас</a></li>
               <li><a href="#">Каталог туров</a></li>
               <li><a href="#">Контакты</a></li>
             </ul>
           </nav>
           <div class="phone">
-            <p>+7 (999) 123 45 67</p>
+            <p>+7 (999) <span class="whitePhone"> 123 45 67</span></p>
           </div>
         </div>
-        <p class="hight-text">Пешие туры по Башкирии</p>
-        <p>Исследуем Южный Урал каждые выходные</p>
-        <a href="" class="header-link"><p>Хочу с вами!</p></a>
+        <div class="headerBanner">
+          <p class="hight-text">Пешие туры по Башкирии</p>
+          <p>Исследуем Южный Урал каждые выходные</p>
+          <a href="" class="header-link"><p>Хочу с вами!</p></a>
+        </div>
       </header>
       <div class="whoarewe">
         <h1>Кто мы такие?</h1>
