Доделал шапку и начал кто мы

--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -28,34 +28,54 @@
           </div>
         </div>
         <div class="headerBanner">
-          <p class="hight-text">Пешие туры по Башкирии</p>
-          <p>Исследуем Южный Урал каждые выходные</p>
-          <a href="" class="header-link"><p>Хочу с вами!</p></a>
+          <p class="Banner-hight-text">Пешие туры по Башкирии</p>
+          <p class="Banner-medium-text">Исследуем Южный Урал каждые выходные</p>
+          <div class="header-link">
+            <a href=""><p>Хочу с вами!</p></a>
+          </div>
         </div>
       </header>
       <div class="whoarewe">
         <h1>Кто мы такие?</h1>
-        <img src="/img/" alt="" />
-        <p>
-          Компания BASHTOUR уже более семи лет занимается организацией активного
-          отдыха на территории республики Башкортостан. Мы точно знаем самые
-          красочные и удивительные места. Ежегодно мы и наши туристы проходим
-          более тысячи километров по пересеченной местности. Маршурты походов
-          выстроены так, чтобы все дни тура получились маскимально
-          разнообразными. Если вы любите яркие, насыщенные впечатлениями
-          путешествия, записывайтесь в увлекательный поход по Башкортостану в
-          нашей дружной компании!
-        </p>
-        <p>
-          Пеший поход с командой BASHTOUR — это уникальная возможность изучить
-          природу родного края, познакомиться с историей и культурой республики,
-          а также получить заряд позитива и вдохновения на месяц вперед.
-          Протяженность полноценного похода составляет в среднем 30-80 км.
-          Вашими спутниками станут величественные горы, живописные берега, песни
-          у вечернего костра, душевные беседы, рыбалка и комары. Но настоящий
-          турист не боится комаров!
-        </p>
-        <img src="/img/" alt="" />
+        <div class="flexWrapper">
+          <div class="img">
+            <img src="/img/картинка 1.png" alt="" />
+          </div>
+          <div class="text1">
+            <p>
+              Компания BASHTOUR уже более семи лет занимается организацией
+              активного отдыха на территории республики Башкортостан. Мы точно
+              знаем самые красочные и удивительные места.
+            </p>
+            <p>
+              Ежегодно мы и наши туристы проходим более тысячи километров по
+              пересеченной местности. Маршурты походов выстроены так, чтобы все
+              дни тура получились маскимально разнообразными.
+            </p>
+            <p>
+              Если вы любите яркие, насыщенные впечатлениями путешествия,
+              записывайтесь в увлекательный поход по Башкортостану в нашей
+              дружной компании!
+            </p>
+          </div>
+          <div class="text2">
+            <p>
+              Пеший поход с командой BASHTOUR — это уникальная возможность
+              изучить природу родного края, познакомиться с историей и культурой
+              республики, а также получить заряд позитива и вдохновения на месяц
+              вперед.
+            </p>
+            <p>
+              Протяженность полноценного похода составляет в среднем 30-80 км.
+              Вашими спутниками станут величественные горы, живописные берега,
+              песни у вечернего костра, душевные беседы, рыбалка и комары. Но
+              настоящий турист не боится комаров!
+            </p>
+          </div>
+          <div class="img2">
+            <img src="/img/картинка 2.png" alt="" />
+          </div>
+        </div>
       </div>
       <div class="upcomingtours">
         <a href="#">Смотреть все</a>
