--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -78,53 +78,92 @@
         </div>
       </div>
       <div class="upcomingtours">
-        <a href="#">Смотреть все</a>
-        <div class="tour">
-          <a href="#">
-            <div class="prev">
-              <!---Background image-->
-              <p>Дней: 3</p>
-            </div>
-            <p>Хребет Ирендык</p>
-            <p>05.03.2021</p>
-            <p>от 1700 руб.</p>
-          </a>
+        <h1>Ближайшие туры</h1>
+        <div class="tours">
+          <a class="arrow" href="#"
+            >Смотреть все <img src="/img/Arrow 6.svg" alt="Стрелка тунда →"
+          /></a>
+          <div class="tour">
+            <a href="#">
+              <div class="prev">
+                <!---Background image-->
+                <img src="/img/картинка.png" alt="Хребет Ирендык" />
+                <p>Дней: 3</p>
+              </div>
+              <p class="monserat500">Хребет Ирендык</p>
+              <img
+                src="/img/calendar.png"
+                align="left"
+                alt="Тут маленький календарь"
+              />
+              <p>05.03.2021</p>
+              <p>от <span class="orangeText">1700</span> руб.</p>
+            </a>
+          </div>
+          <div class="tour">
+            <a href="#">
+              <div class="prev">
+                <!---Background image-->
+                <img src="/img/картинка(1).png" alt="Большой Иримель" />
+                <p>Дней: 7</p>
+              </div>
+              <p>Большой Иримель</p>
+              <img
+                src="/img/calendar.png"
+                align="left"
+                alt="Тут маленький календарь"
+              />
+              <p>05.03.2021</p>
+              <p>от <span class="orangeText">2800</span> руб.</p>
+            </a>
+          </div>
+          <div class="tour">
+            <a href="#">
+              <div class="prev">
+                <!---Background image-->
+                <img
+                  src="/img/картинка(2).png"
+                  alt="«Зубы Шурале» Айгирские скалы"
+                />
+                <p>Дней: 3</p>
+              </div>
+              <p>
+                «Зубы Шурале» <br />
+                Айгирские скалы
+              </p>
+              <img
+                src="/img/calendar.png"
+                align="left"
+                alt="Тут маленький календарь"
+              />
+              <p>06.03.2021</p>
+              <p>от <span class="orangeText">1700</span> руб.</p>
+            </a>
+          </div>
+          <div class="tour">
+            <a href="#">
+              <div class="prev">
+                <!---Background image-->
+                <img src="/img/картинка(3).png" alt="Мурыдымовское ущелье" />
+                <p>Дней: 5</p>
+              </div>
+              <p>Мурыдымовское ущелье</p>
+              <img
+                src="/img/calendar.png"
+                align="left"
+                alt="Тут маленький календарь"
+              />
+              <p>13.03.2021</p>
+              <p>от <span class="orangeText">2200</span> руб.</p>
+            </a>
+          </div>
+          <a class="arrowleft" href="#"
+            ><img src="/img/Arrow 7.svg" alt="Стрелка тунды ←"
+          /></a>
+          <a class="arrowright" href="#"
+            ><img src="/img/Arrow 6.svg" alt="Стрелка тунда →"
+          /></a>
         </div>
-        <div class="tour">
-          <a href="#">
-            <div class="prev">
-              <!---Background image-->
-              <p>Дней: 7</p>
-            </div>
-            <p>Большой Иримель</p>
-            <p>05.03.2021</p>
-            <p>от 2800 руб.</p>
-          </a>
-        </div>
-        <div class="tour">
-          <a href="#">
-            <div class="prev">
-              <!---Background image-->
-              <p>Дней: 3</p>
-            </div>
-            <p>«Зубы Шурале» Айгирские скалы</p>
-            <p>06.03.2021</p>
-            <p>от 1700 руб.</p>
-          </a>
-        </div>
-        <div class="tour">
-          <a href="#">
-            <div class="prev">
-              <!---Background image-->
-              <p>Дней: 5</p>
-            </div>
-            <p>Мурыдымовское ущелье</p>
-            <p>13.03.2021</p>
-            <p>от 2200 руб.</p>
-          </a>
-        </div>
-        <a href="#"><!--Стрелка в лево--></a>
-        <a href="#"><!--Стрелка в право--></a>
       </div>
       <div class="howitwas">
         <img src="#" alt="Картинка1" />
