--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -1,263 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
-    <title>BASHTOUR - Пешие туры по Башкирии</title>
-  </head>
-  <body>
-    <div class="main-container">
-      <header>
-        <div class="navbar">
-          <div class="logo">
-            <img src="/img/Vector.png" alt="BASHTOUR" />
-            <p><span class="orangeText">BASH</span>TOUR</p>
-          </div>
-          <nav>
-            <ul>
-              <li><a href="#">Главная</a></li>
-              <li><a href="#">О нас</a></li>
-              <li><a href="#">Каталог туров</a></li>
-              <li><a href="#">Контакты</a></li>
-            </ul>
-          </nav>
-          <div class="phone">
-            <p>+7 (999) <span class="whitePhone"> 123 45 67</span></p>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/style.css" />
+  <title>BASHTOUR - Пешие туры по Башкирии</title>
+</head>
+
+<body>
+  <div class="main-container">
+    <header>
+      <div class="navbar">
+        <div class="logo">
+          <img src="/img/Vector.png" alt="BASHTOUR" />
+          <p><span class="orangeText">BASH</span>TOUR</p>
         </div>
-        <div class="headerBanner">
-          <p class="Banner-hight-text">Пешие туры по Башкирии</p>
-          <p class="Banner-medium-text">Исследуем Южный Урал каждые выходные</p>
-          <div class="header-link">
-            <a href=""><p>Хочу с вами!</p></a>
-          </div>
-        </div>
-      </header>
-      <div class="whoarewe">
-        <h1>Кто мы такие?</h1>
-        <div class="flexWrapper">
-          <div class="img">
-            <img src="/img/картинка 1.png" alt="" />
-          </div>
-          <div class="text1">
-            <p>
-              Компания BASHTOUR уже более семи лет занимается организацией
-              активного отдыха на территории республики Башкортостан. Мы точно
-              знаем самые красочные и удивительные места.
-            </p>
-            <p>
-              Ежегодно мы и наши туристы проходим более тысячи километров по
-              пересеченной местности. Маршурты походов выстроены так, чтобы все
-              дни тура получились маскимально разнообразными.
-            </p>
-            <p>
-              Если вы любите яркие, насыщенные впечатлениями путешествия,
-              записывайтесь в увлекательный поход по Башкортостану в нашей
-              дружной компании!
-            </p>
-          </div>
-          <div class="text2">
-            <p>
-              Пеший поход с командой BASHTOUR — это уникальная возможность
-              изучить природу родного края, познакомиться с историей и культурой
-              республики, а также получить заряд позитива и вдохновения на месяц
-              вперед.
-            </p>
-            <p>
-              Протяженность полноценного похода составляет в среднем 30-80 км.
-              Вашими спутниками станут величественные горы, живописные берега,
-              песни у вечернего костра, душевные беседы, рыбалка и комары. Но
-              настоящий турист не боится комаров!
-            </p>
-          </div>
-          <div class="img2">
-            <img src="/img/картинка 2.png" alt="" />
-          </div>
+        <nav>
+          <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">О нас</a></li>
+            <li><a href="#">Каталог туров</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="phone">
+          <p>+7 (999) <span class="whitePhone"> 123 45 67</span></p>
         </div>
       </div>
-      <div class="upcomingtours">
-        <h1>Ближайшие туры</h1>
-        <div class="tours">
-          <a class="arrow" href="#"
-            >Смотреть все <img src="/img/Arrow 6.svg" alt="Стрелка тунда →"
-          /></a>
-          <div class="tour">
-            <a href="#">
-              <div class="prev">
-                <!---Background image-->
-                <img src="/img/картинка.png" alt="Хребет Ирендык" />
-                <p>Дней: 3</p>
-              </div>
-              <p class="monserat500">Хребет Ирендык</p>
-              <img
-                src="/img/calendar.png"
-                align="left"
-                alt="Тут маленький календарь"
-              />
-              <p>05.03.2021</p>
-              <p>от <span class="orangeText">1700</span> руб.</p>
-            </a>
-          </div>
-          <div class="tour">
-            <a href="#">
-              <div class="prev">
-                <!---Background image-->
-                <img src="/img/картинка(1).png" alt="Большой Иримель" />
-                <p>Дней: 7</p>
-              </div>
-              <p>Большой Иримель</p>
-              <img
-                src="/img/calendar.png"
-                align="left"
-                alt="Тут маленький календарь"
-              />
-              <p>05.03.2021</p>
-              <p>от <span class="orangeText">2800</span> руб.</p>
-            </a>
-          </div>
-          <div class="tour">
-            <a href="#">
-              <div class="prev">
-                <!---Background image-->
-                <img
-                  src="/img/картинка(2).png"
-                  alt="«Зубы Шурале» Айгирские скалы"
-                />
-                <p>Дней: 3</p>
-              </div>
-              <p>
-                «Зубы Шурале» <br />
-                Айгирские скалы
-              </p>
-              <img
-                src="/img/calendar.png"
-                align="left"
-                alt="Тут маленький календарь"
-              />
-              <p>06.03.2021</p>
-              <p>от <span class="orangeText">1700</span> руб.</p>
-            </a>
-          </div>
-          <div class="tour">
-            <a href="#">
-              <div class="prev">
-                <!---Background image-->
-                <img src="/img/картинка(3).png" alt="Мурыдымовское ущелье" />
-                <p>Дней: 5</p>
-              </div>
-              <p>Мурыдымовское ущелье</p>
-              <img
-                src="/img/calendar.png"
-                align="left"
-                alt="Тут маленький календарь"
-              />
-              <p>13.03.2021</p>
-              <p>от <span class="orangeText">2200</span> руб.</p>
-            </a>
-          </div>
-          <a class="arrowleft" href="#"
-            ><img src="/img/Arrow 7.svg" alt="Стрелка тунды ←"
-          /></a>
-          <a class="arrowright" href="#"
-            ><img src="/img/Arrow 6.svg" alt="Стрелка тунда →"
-          /></a>
+      <div class="headerBanner">
+        <p class="Banner-hight-text">Пешие туры по Башкирии</p>
+        <p class="Banner-medium-text">Исследуем Южный Урал каждые выходные</p>
+        <div class="header-link">
+          <a href="">
+            <p>Хочу с вами!</p>
+          </a>
         </div>
       </div>
-      <div class="howitwas">
-        <img src="#" alt="Картинка1" />
-        <img src="#" alt="Картинка2" />
-        <img src="#" alt="Картинка3" />
-        <img src="#" alt="Картинка4" />
-        <img src="#" alt="Картинка5" />
-        <img src="#" alt="Картинка6" />
-      </div>
-      <div class="sayabout">
-        <div class="aboutus">
-          <img src="#" alt="Аватар1" />
-          <p>Михаил</p>
+    </header>
+    <div class="whoarewe">
+      <h1>Кто мы такие?</h1>
+      <div class="flexWrapper">
+        <div class="img">
+          <img src="/img/картинка 1.png" alt="" />
+        </div>
+        <div class="text1">
           <p>
-            Ездил с супругой в большой 7-дневный тур. Сервис и организация
-            похода просто на высоте! Все очень понравилось.
+            Компания BASHTOUR уже более семи лет занимается организацией
+            активного отдыха на территории республики Башкортостан. Мы точно
+            знаем самые красочные и удивительные места.
+          </p>
+          <p>
+            Ежегодно мы и наши туристы проходим более тысячи километров по
+            пересеченной местности. Маршурты походов выстроены так, чтобы все
+            дни тура получились маскимально разнообразными.
+          </p>
+          <p>
+            Если вы любите яркие, насыщенные впечатлениями путешествия,
+            записывайтесь в увлекательный поход по Башкортостану в нашей
+            дружной компании!
           </p>
         </div>
-        <div class="aboutus">
-          <img src="#" alt="Аватар2" />
-          <p>Ирина</p>
+        <div class="text2">
           <p>
-            Очень порадовало наличие туров, в которые можно отправиться с
-            детьми. Приятно провели время на природе.
+            Пеший поход с командой BASHTOUR — это уникальная возможность
+            изучить природу родного края, познакомиться с историей и культурой
+            республики, а также получить заряд позитива и вдохновения на месяц
+            вперед.
           </p>
-          <p>Лево</p>
-          <p>Право</p>
+          <p>
+            Протяженность полноценного похода составляет в среднем 30-80 км.
+            Вашими спутниками станут величественные горы, живописные берега,
+            песни у вечернего костра, душевные беседы, рыбалка и комары. Но
+            настоящий турист не боится комаров!
+          </p>
         </div>
+        <div class="img2">
+          <img src="/img/картинка 2.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="upcomingtours">
+      <h1>Ближайшие туры</h1>
+      <div class="tours">
+        <a class="arrow" href="#">Смотреть все <img src="/img/Arrow 6.svg" alt="Стрелка тунда →" /></a>
+        <div class="tour">
+          <a href="#">
+            <div class="prev">
+              <!---Background image-->
+              <img src="/img/картинка.png" alt="Хребет Ирендык" />
+              <p>Дней: 3</p>
+            </div>
+            <p class="monserat500">Хребет Ирендык</p>
+            <img src="/img/calendar.png" align="left" alt="Тут маленький календарь" />
+            <p>05.03.2021</p>
+            <p>от <span class="orangeText">1700</span> руб.</p>
+          </a>
+        </div>
+        <div class="tour">
+          <a href="#">
+            <div class="prev">
+              <!---Background image-->
+              <img src="/img/картинка(1).png" alt="Большой Иримель" />
+              <p>Дней: 7</p>
+            </div>
+            <p>Большой Иримель</p>
+            <img src="/img/calendar.png" align="left" alt="Тут маленький календарь" />
+            <p>05.03.2021</p>
+            <p>от <span class="orangeText">2800</span> руб.</p>
+          </a>
+        </div>
+        <div class="tour">
+          <a href="#">
+            <div class="prev">
+              <!---Background image-->
+              <img src="/img/картинка(2).png" alt="«Зубы Шурале» Айгирские скалы" />
+              <p>Дней: 3</p>
+            </div>
+            <p>
+              «Зубы Шурале» <br />
+              Айгирские скалы
+            </p>
+            <img src="/img/calendar.png" align="left" alt="Тут маленький календарь" />
+            <p>06.03.2021</p>
+            <p>от <span class="orangeText">1700</span> руб.</p>
+          </a>
+        </div>
+        <div class="tour">
+          <a href="#">
+            <div class="prev">
+              <!---Background image-->
+              <img src="/img/картинка(3).png" alt="Мурыдымовское ущелье" />
+              <p>Дней: 5</p>
+            </div>
+            <p>Мурыдымовское ущелье</p>
+            <img src="/img/calendar.png" align="left" alt="Тут маленький календарь" />
+            <p>13.03.2021</p>
+            <p>от <span class="orangeText">2200</span> руб.</p>
+          </a>
+        </div>
+        <a class="arrowleft" href="#"><img src="/img/Arrow 7.svg" alt="Стрелка тунды ←" /></a>
+        <a class="arrowright" href="#"><img src="/img/Arrow 6.svg" alt="Стрелка тунда →" /></a>
+      </div>
+    </div>
+    <div class="howitwas">
+      <h1>Посмотрите, как это было...</h1>
+      <div class="imghowitwas">
+        <img src="/img/Rectangle 69.png" alt="Картинка1" />
+        <img src="/img/Rectangle 70.png" alt="Картинка2" />
+        <img src="/img/Rectangle 71.png" alt="Картинка3" />
+        <img src="/img/Rectangle 72.png" alt="Картинка4" />
+        <img src="/img/Rectangle 73.png" alt="Картинка5" />
+        <img src="/img/Rectangle 74.png" alt="Картинка6" />
+      </div>
+    </div>
+    <div class="sayabout">
+      <div class="aboutus">
+        <img src="#" alt="Аватар1" />
+        <p>Михаил</p>
+        <p>
+          Ездил с супругой в большой 7-дневный тур. Сервис и организация
+          похода просто на высоте! Все очень понравилось.
+        </p>
+      </div>
+      <div class="aboutus">
+        <img src="#" alt="Аватар2" />
+        <p>Ирина</p>
+        <p>
+          Очень порадовало наличие туров, в которые можно отправиться с
+          детьми. Приятно провели время на природе.
+        </p>
         <p>Лево</p>
         <p>Право</p>
       </div>
-      <div class="request">
-        <h1>Оставьте заявку...</h1>
-        <p>
-          Не можете определиться с туром? Оставьте свой номер телефона, и мы
-          перезвоним Вам в ближайшее время.
-        </p>
-        <form action="#" method="post">
-          <ul>
-            <li>
-              <input type="text" id="name" name="request" value="Имя" />
-            </li>
-            <li>
-              <input
-                type="tel"
-                id="tel"
-                name="request"
-                value="+ 7 (999) 765 43 21"
-              />
-            </li>
-            <li>
-              <button type="submit">Отправить</button>
-            </li>
-          </ul>
-        </form>
-      </div>
+      <p>Лево</p>
+      <p>Право</p>
     </div>
-    <footer>
-      <!--
+    <div class="request">
+      <h1>Оставьте заявку...</h1>
+      <p>
+        Не можете определиться с туром? Оставьте свой номер телефона, и мы
+        перезвоним Вам в ближайшее время.
+      </p>
+      <form action="#" method="post">
+        <ul>
+          <li>
+            <input type="text" id="name" name="request" value="Имя" />
+          </li>
+          <li>
+            <input type="tel" id="tel" name="request" value="+ 7 (999) 765 43 21" />
+          </li>
+          <li>
+            <button type="submit">Отправить</button>
+          </li>
+        </ul>
+      </form>
+    </div>
+  </div>
+  <footer>
+    <!--
             тут должно быть фоновое изображение
         -->
-      <div>
-        <h1>...или приходите в наш офис</h1>
-        <div class="contact">
-          <img src="#" alt="Пиктограмма маркера" />
-          <p>г. Уфа, ул. Карла Маркса, 19 c 10:00 до 19:00</p>
-          <img src="#" alt="Пиктограмма телефона" />
-          <p>+ 7 (999) 123 45 67</p>
-          <img src="#" alt="Пиктограмма конверта" />
-          <p>bashtour@gmail.com</p>
-        </div>
-        <div class="footer">
-          <div class="logo">
-            <img src="/img/Vector.png" alt="BASHTOUR" />
-            <p>BASHTOUR</p>
-          </div>
-          <div class="social">
-            <a href="#">
-              <img src="#" alt="Vk" />
-            </a>
-            <a href="#">
-              <img src="#" alt="Ints" />
-            </a>
-            <a href="#">
-              <img src="#" alt="Youtube" />
-            </a>
-            <a href="#">
-              <img src="#" alt="Facebook" />
-            </a>
-          </div>
-          <a href="#">Все права защищены</a>
-          <a href="#">Политика конфиденциальности</a>
-        </div>
+    <div>
+      <h1>...или приходите в наш офис</h1>
+      <div class="contact">
+        <img src="#" alt="Пиктограмма маркера" />
+        <p>г. Уфа, ул. Карла Маркса, 19 c 10:00 до 19:00</p>
+        <img src="#" alt="Пиктограмма телефона" />
+        <p>+ 7 (999) 123 45 67</p>
+        <img src="#" alt="Пиктограмма конверта" />
+        <p>bashtour@gmail.com</p>
       </div>
-    </footer>
-  </body>
+      <div class="footer">
+        <div class="logo">
+          <img src="/img/Vector.png" alt="BASHTOUR" />
+          <p>BASHTOUR</p>
+        </div>
+        <div class="social">
+          <a href="#">
+            <img src="#" alt="Vk" />
+          </a>
+          <a href="#">
+            <img src="#" alt="Ints" />
+          </a>
+          <a href="#">
+            <img src="#" alt="Youtube" />
+          </a>
+          <a href="#">
+            <img src="#" alt="Facebook" />
+          </a>
+        </div>
+        <a href="#">Все права защищены</a>
+        <a href="#">Политика конфиденциальности</a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
