картинки, нужно установить в центр

--- a/bashtour.test/www/index.html
+++ b/bashtour.test/www/index.html
@@ -147,12 +147,12 @@
     <div class="howitwas">
       <h1>Посмотрите, как это было...</h1>
       <div class="imghowitwas">
-        <img src="/img/Rectangle 69.png" alt="Картинка1" />
-        <img src="/img/Rectangle 70.png" alt="Картинка2" />
-        <img src="/img/Rectangle 71.png" alt="Картинка3" />
-        <img src="/img/Rectangle 72.png" alt="Картинка4" />
-        <img src="/img/Rectangle 73.png" alt="Картинка5" />
-        <img src="/img/Rectangle 74.png" alt="Картинка6" />
+        <img class="img69" src="/img/Rectangle 69.png" alt="Картинка1" />
+        <img class="img70" src="/img/Rectangle 70.png" alt="Картинка2" />
+        <img class="img71" src="/img/Rectangle 71.png" alt="Картинка3" />
+        <img class="img72" src="/img/Rectangle 72.png" alt="Картинка4" />
+        <img class="img73" src="/img/Rectangle 73.png" alt="Картинка5" />
+        <img class="img74" src="/img/Rectangle 74.png" alt="Картинка6" />
       </div>
     </div>
     <div class="sayabout">
